examples/springboot/k8s/ec2/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "petstore-ec2-ingress"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /healthz
  labels:
    app: petstore-ec2-ingress
spec:
  defaultBackend:
    service:
      name: petstore-ec2-svc
      port:
        number: 80
